--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -22,6 +22,27 @@
     cursor: pointer;
 }
 
+.closebutton {
+    border-radius: 50%;
+    width: 24px;
+    height: 24px;
+    position: absolute;
+    top: 24px;
+    right: 24px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #e7e9fc;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    padding: 0;
+    cursor: pointer;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-close-svg {
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .backdrop-one.is-open {
     display: flex; }
 
@@ -29,7 +50,7 @@
     padding: 64px 16px 112px 16px;
     max-width: 375px;
     width: 100%;
-
+    position: relative;
     background-color: #dfebeb;
 
 }
@@ -106,13 +127,13 @@
     white-space: nowrap;
     width: 100%;
     cursor: pointer;
-    transition: background-color 0.3s ease;
+    transition: background-color 0.3s ease, box-shadow 0.3s ease;
 }
 
-.checkout-btn:hover {
-    background-color: #aea3f8;
-}
+.checkout-btn:hover,.checkout-btn:focus {
+    background-color: #a9c6fa;
 
+}
 @media only screen and (min-width: 768px) { 
     .backdrop-one {
     background-color: rgba(0, 0, 0, 0.25);
